Add: Package and Build data
This will make it easier to update docs that show working with the
latest package available.

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ CFE_DIR: _site
 CFE_manuals_version: master
 cfengine:
   branch: master
+  latest_patch_release: NA
+  latest_package_build: NA
 
 paginate: 500
 
