Interpret markdwon as text
(cherry picked from commit 71bff0032922ab19934f4485f5532e0d23203eca)

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 ## These files are binary and should be left untouched
 #
 
+*.markdown text
 # (binary is a macro for -text -diff)
 *.png binary
 *.jpg binary
