--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 safe: false
 #include: ./pages/
 plugins: ./_plugins/
-# baseurl: /docs/master/
+# baseurl: /docs/3.15/
 git-repository: github.com/cfengine/documentation
 #source:      ./pages/
 #destination:
@@ -16,7 +16,7 @@ CFE_OUTPUT: true
 #CFE_DIR - output folder if CFE_OUTPUT turned on
 CFE_DIR: _site
 #to create correct links in sitemap
-CFE_manuals_version: master
+CFE_manuals_version: 3.15
 cfengine:
   branch: master
   core_branch: "master"
@@ -44,5 +44,5 @@ asset_pipeline:
   bundle: true            # Default = true
   compress: true          # Default = true
   output_path: assets     # Default = assets
-  display_path: docs/master/assets       # Default = nil
+  display_path: docs/3.15/assets       # Default = nil
   gzip: false             # Default = false
