--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ CFE_manuals_version: 3.15
 cfengine:
   branch: 3.15
   core_branch: "3.15.x"
-  latest_patch_release: "0b1"
+  latest_patch_release: "0"
   latest_package_build: "1"
   masterfiles_branch: "3.15.x"
 
@@ -29,10 +29,10 @@ Template:
     line_numbers: true
 
 vagrant:
-  version: "2.2.0"
+  version: "2.2.6"
 
 virtualbox:
-  version: "5.2.18"
+  version: "6.0.6"
 
 paginate: 500
 
